<resources>
    <string name="app_name">Firebase Demo</string>
    <string name="intent_id">IntentID</string>
    <string name="quickstart_message">1.The Log-Token button logs the token to the logcat\n2.The Send Notification Button sends the notification to the client device\n3. Subscribe to news : Client subscribes to the topic news\n4. Send Message to Topic : The server will send msg to all clients subscribed to news\n5. Send Notification: Message is sent to the client whose key is defined in CLIENT_REGISTRATION_TOKEN</string>
    <string name="send_notification">Send Message to Client</string>
    <string name="log_token">Load Token</string>
    <string name="server_actions">Simulate Server Functions</string>
    <string name="client_actions">Simulate Client Functions</string>


    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="go_to_fcm_demo">Cloud Messaging Example</string>
    <string name="go_to_realtime_database_demo">Realtime Database Example</string>

    <string name="username">Player Name</string>
    <string name="score">Score</string>
    <string name="channel_name">Notifcation Name</string>s
    <string name="channel_description">Notification Channel for the demo app</string>
    <string name="channel_id">Channel_Name_NUMAD_demo</string>

    <string name="add5">Add 5 points to one player</string>
    <string name="send_notification_text">Send Android Notification</string>
    <string name="subscribe_to_news">Subscribe to \"News\"</string>
    <string name="send_message_to_news">Send Message to News Topic</string>
    <string name="start_notification_act">Notification Example</string>
    <string name="msg_subscribe_failed">Subscription Failed</string>

    <string name="start_permissions_act">Permissions Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>