<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_realtime_database"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:padding="3dp"
        android:id="@+id/dataAddLayout"
        android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dumbDataAdd"
        android:text="Add data to firebase"
        android:onClick="doAddDataToDb"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dataUpdateTextView"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:shrinkColumns="2"
        android:id="@+id/tableLayout"
        android:layout_below="@id/dataAddLayout">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/score"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:id="@+id/username1"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/score1"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/score2"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tableLayout"
        android:layout_above="@+id/linearLayout">

        <ImageView
            android:id="@+id/firebaseImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/firebase"
            android:visibility="visible" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:checked="true"
                android:text="Player 1"
                android:id="@+id/player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="Player 2"
                android:id="@+id/player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RadioGroup>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add5"
            android:text="@string/add5"
            android:onClick="addFivePoints"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetUsers"
            android:text="Reset Users" />



    </LinearLayout>

</RelativeLayout>
